--- a/app/src/main/res/layout/second_fragment.xml
+++ b/app/src/main/res/layout/second_fragment.xml
@@ -7,13 +7,29 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textSecondFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="Second Tab"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginTop="40dp"
-        android:id="@+id/textSecondFragment"
-        android:layout_centerInParent="true"/>
+        android:layout_marginEnd="143dp"
+        android:layout_marginRight="143dp"
+        android:text="Second Tab"
+        android:textSize="25sp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginBottom="57dp"
+        android:text="Button" />
 
 
 </RelativeLayout>
